--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <div class="red">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae deleniti ab impedit magnam voluptate esse eaque dolore numquam asperiores necessitatibus perspiciatis veniam quasi odit, nostrum praesentium eveniet expedita nemo fuga sequi optio saepe officiis!</div>
-    <div class="green">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, libero tempore quis, enim perferendis delectus ullam repellat ea, voluptates repellendus adipisci ex est.</div>
+    <div class="contener">
+        this is text
+    </div>
 </body>
 </html>
